--- a/chatapp_frontend/chatapp/src/app/app.html
+++ b/chatapp_frontend/chatapp/src/app/app.html
@@ -1,26 +1,35 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
 <main class="main">
   <div class="container">
-    <button (click)="handleFetch()">Get Chats</button>
-
-    <button>Create Chats(not implemented)</button>
+    <form action="" class="chat-form">
+      <div class="form-group">
+        <label for="chat_name">Name:</label>
+        <input type="text" id="chat_name" name="chat_name" [(ngModel)]="chatName" />
+      </div>
+      <div class="form-group">
+        <label for="chat_message">Message:</label>
+        <input type="text" id="chat_message" name="chat_message" [(ngModel)]="message" />
+      </div>
+      <div class="form-actions">
+        <button type="button" (click)="handleCreateChat()">Create Chats</button>
+      </div>
+    </form>
+    <div class="get-chats">
+      <button type="button" (click)="handleGetChats()">Get All Chats</button>
+    </div>
   </div>
+  <div id="result"></div>
+  <!-- <div class="result">
+    <div *ngIf="chats && chats.length > 0">
+      <h2>Chats:</h2>
+      <div *ngIf="chats && chats.length > 0; else noChats">
+        <ul>
+          <li *ngFor="let chat of chats">
+            <strong>{{ chat.name }}:</strong> {{ chat.message }}
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div> -->
 </main>
 
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<router-outlet />
+<router-outlet></router-outlet>
